Solucionado el problema de que se quedasen atascados intentando ir a través de una pared
git-svn-id: https://forja.rediris.es/svn/cusl4-catastrof@320 8c4acde5-3c00-4ed3-8754-bc08a9928e99